--- a/init.marvel.rc
+++ b/init.marvel.rc
@@ -1,6 +1,8 @@
 on boot
     mount debugfs /sys/kernel/debug /sys/kernel/debug
 
+    mkdir /mnt/sdcard 0000 system system
+
     mkdir /data/misc/wifi 0770 wifi wifi
     mkdir /data/misc/wifi/sockets 0770 wifi wifi
     mkdir /data/misc/dhcp 0770 dhcp dhcp
