--- a/init.marvel.rc
+++ b/init.marvel.rc
@@ -86,7 +86,7 @@ service wpa_supplicant /system/bin/logwrapper /system/bin/wpa_supplicant \
     disabled
     oneshot
 
-service dhcpcd_eth0 /system/bin/dhcpcd -ABKL eth0
+service dhcpcd_eth0 /system/bin/dhcpcd -ABKL
     class main
     disabled
     oneshot
@@ -108,7 +108,7 @@ on property:service.modem.enable=0
     stop modem
 
 on property:init.svc.wpa_supplicant=stopped
-    stop dhcpcd
+    stop dhcpcd_eth0
 
 # compass/accelerometer daemon
 service akmd /system/bin/akmd
