init: Some init files cleanup.

--- a/init.marvel.rc
+++ b/init.marvel.rc
@@ -1,4 +1,18 @@
-on boot
+import init.liberty.usb.rc
+
+on early-init
+
+    #sdcard
+    export EXTERNAL_STORAGE /mnt/sdcard
+    mkdir /mnt/sdcard 0000 system system
+    symlink /mnt/sdcard /sdcard
+
+    #sd-ext
+    export SD_EXT_DIRECTORY /sd-ext
+    mkdir /sd-ext 0771 system system
+
+
+on early-fs
     mkdir /data/misc/wifi 0770 wifi wifi
     mkdir /data/misc/wifi/sockets 0770 wifi wifi
     mkdir /data/misc/dhcp 0770 dhcp dhcp
@@ -30,10 +44,10 @@ on boot
     chown system camera /sys/devices/platform/flashlight.0/leds/flashlight/brightness
     chmod 0660 /sys/devices/platform/flashlight.0/leds/flashlight/brightness
 
-on early-init
+
+on boot
     mount debugfs /sys/kernel/debug /sys/kernel/debug
 
-    mkdir /mnt/sdcard 0000 system system
 
 on init
     mount rootfs rootfs / remount
@@ -86,6 +100,7 @@ service wpa_supplicant /system/bin/logwrapper /system/bin/wpa_supplicant \
     disabled
     oneshot
 
+
 service dhcpcd_eth0 /system/bin/dhcpcd -ABKL
     class main
     disabled
@@ -95,6 +110,7 @@ service iprenew_eth0 /system/bin/dhcpcd -n
     class main
     disabled
     oneshot
+
 
 service modem /system/xbin/wireless_modem
     user system
@@ -107,16 +123,20 @@ on property:service.modem.enable=1
 on property:service.modem.enable=0
     stop modem
 
+
 on property:init.svc.wpa_supplicant=stopped
     stop dhcpcd_eth0
+
 
 # compass/accelerometer daemon
 service akmd /system/bin/akmd
     user compass
     group compass misc input
 
+
 service srv_ser2net /system/bin/ser2net -n
     disabled
+
 
 on property:service.ser2net.enable=1
     start srv_ser2net
@@ -124,11 +144,13 @@ on property:service.ser2net.enable=1
 on property:service.ser2net.enable=0
     stop srv_ser2net
 
+
 service hciattach /system/bin/brcm_patchram_plus --enable_hci --enable_lpm \
     --baudrate 3000000 --patchram /etc/firmware/bcm4329.hcd /dev/ttyHS0
     user bluetooth
     group bluetooth net_bt_admin
     disabled
+
 
 service ril-daemon /system/bin/rild
     class main
