--- a/init.marvel.rc
+++ b/init.marvel.rc
@@ -130,6 +130,7 @@ on property:init.svc.wpa_supplicant=stopped
 
 # compass/accelerometer daemon
 service akmd /system/bin/akmd
+    class main
     user compass
     group compass misc input
 
