--- a/ueventd.marvel.rc
+++ b/ueventd.marvel.rc
@@ -17,7 +17,7 @@
 /dev/uinput               0660   system     bluetooth
 /dev/alarm                0664   system     radio
 /dev/tty                 0660   root       system
-/dev/graphics/*           0660   root       graphics
+/dev/graphics/*           0660   media      graphics
 /dev/msm_hw3dm            0660   system     graphics
 /dev/input/*              0660   root       input
 /dev/eac                  0660   root       audio
