--- a/ueventd.marvel.rc
+++ b/ueventd.marvel.rc
@@ -48,10 +48,10 @@
 /dev/smd0                 0640   radio      radio
 /dev/htc-acoustic         0660   system     audio
 /dev/alarm                0664   system     radio
+/dev/oncrpc/*             0660   system     radio
 
 /dev/tty                  0660   root       system
 /dev/input/*              0660   root       input
-/dev/oncrpc/*             0660   root       system
 /dev/lightsensor          0640   system     system
 /dev/bus/usb/*            0660   root       usb
 
