--- a/init.marvel.rc
+++ b/init.marvel.rc
@@ -34,10 +34,14 @@ on early-fs
     chown system system /sys/class/leds/lcd-backlight/brightness
     chown system system /sys/class/leds/lcd-backlight/auto
 
-   # flashlight
+    # flashlight
     chown system camera /sys/devices/platform/flashlight.0/leds/flashlight/brightness
     chmod 0660 /sys/devices/platform/flashlight.0/leds/flashlight/brightness
 
+    # ril
+    chown radio system /sys/camera_led_status/led_ril_status
+    chown radio system /sys/module/gpio_event/parameters/phone_call_status
+    chown radio system /sys/module/pm/parameters/idle_sleep_mode
 
 on boot
     mount debugfs /sys/kernel/debug /sys/kernel/debug
