init: Add permissions for g and light sensors.

--- a/init.marvel.rc
+++ b/init.marvel.rc
@@ -43,6 +43,21 @@ on early-fs
     chown radio system /sys/module/gpio_event/parameters/phone_call_status
     chown radio system /sys/module/pm/parameters/idle_sleep_mode
 
+    # g-sensors
+    chown radio radio /sys/class/htc_accelerometer/accelerometer/PhoneOnOffFlag
+    chown radio radio /sys/class/htc_ecompass/ecompass/PhoneOnOffFlag
+
+    # light sensors
+    chown system system /sys/class/optical_sensors/lightsensor/ls_adc
+    chown system system /sys/class/optical_sensors/lightsensor/ls_auto
+    chown system system /sys/class/optical_sensors/lightsensor/ls_kadc
+    chown system radio  /sys/class/optical_sensors/proximity/ps_adc
+    chown system system /sys/class/optical_sensors/proximity/ps_kadc
+    chmod 0666          /sys/class/optical_sensors/proximity/ps_kadc
+    chown system system /sys/class/optical_sensors/proximity/ps_led
+    chown system system /sys/class/optical_sensors/proximity/ps_test_mode
+
+
 on boot
     mount debugfs /sys/kernel/debug /sys/kernel/debug
 
