init: Add zRam support.
Virtual Swap Compressed in RAM.

https://lwn.net/Articles/388889/

--- a/init.marvel.rc
+++ b/init.marvel.rc
@@ -162,6 +162,23 @@ service akmd /system/bin/akmd
     group compass misc input
 
 
+# compcache - handle at boot
+service compcache /system/bin/handle_compcache
+    class main
+    user root
+    group root
+    disabled
+
+on property:persist.service.zram=10
+    start compcache
+
+on property:persist.service.zram=18
+    start compcache
+
+on property:persist.service.zram=26
+    start compcache
+
+
 service srv_ser2net /system/bin/ser2net -n
     disabled
 
